app/assets/stylesheets/commons.css.scss
@import 'variables';
@import 'mixins';

p, h1, h2, h3, h4, h5, h6 {
  letter-spacing: 0.065rem;
}

p {
  color: $gray-text;
  font-weight: 300;
  font-size: 13px;
  line-height: 24px;
  margin-bottom: 0;
}

h3 {
  font-size: 15px;
  font-weight: 700;
}

hr {
  margin-top: 0;
  margin-bottom: 0;
}

.yellow{
  color: $yellow;
}

.aqua{
  color: $aqua;
}

.uppercase{
  text-transform: uppercase;
}

.left{
  float: left;
}

.right{
  float: right;
}

.margin-top {
  margin-top: 20px !important;
}

.margin-left {
  margin-left: 15px !important;
}

.pointer{
  cursor: pointer;
}

.add {
  padding-bottom: 25px;
  position: relative;
  width: 122px;
  margin: 15px auto 0;
  padding-left: 20px;
  line-height: 15px;
  display: inline-block;
  transition: .25s;
  &.block {
    display: block;
  }
  &:before {
    text-align: center;
    content: '+';
    position: absolute;
    top: 0;
    left: 0;
    background-color: $aqua;
    width: 15px;
    height: 15px;
    border-radius: 100%;
    color: $white;
    line-height: 15px;
  }
  &:hover {
    color: darken($aqua, 10%);
  }
}

.aqua.arrow {
  position: relative;
  padding-left: 20px;
  display: inline-block;
  transition: .25s;
  cursor: pointer;
  &.block {
    display: block;
  }
  &:before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    background-color: $aqua;
    width: 15px;
    height: 15px;
    border-radius: 100%;
    color: $white;
    line-height: 15px;
    @include at2x('ic_profile_arrow', 16px, 16px);
  }
  &:hover {
    color: darken($aqua, 10%);
  }
}

.overflow-hidden {
  overflow: hidden;
  .height-100 {
    padding-bottom: 9999px;
    margin-bottom: -9999px;
  }
}

.title {
  &.inline {
    img {
      display: inline-block;
      margin-right: 20px;
    }
    h3 {
      display: inline-block;
      &.big {
        font-size: 26px;
      }
    }
  }
}

.add-image {
  width: 100%;
  height: 155px;
  background: $yellow;
  position: relative;
  &:before {
    content: '+';
    position: absolute;
    top: calc(50% - 30px);
    height: 30px;
    width: 30px;
    text-align: center;
    border-radius: 100%;
    background-color: $black;
    left: calc(50% - 15px);
    color: $yellow;
    font-size: 30px;
    line-height: 30px;
    font-weight: 700;
  }
  &:after {
    content: 'Add an Image';
    position: absolute;
    text-transform: uppercase;
    width: 100%;
    height: 100%;
    margin-top: 50%;
    text-align: center;
    font-weight: 700;
  }
}

